Integer.valueOf, Float.valueOf, [...] instead of numeric contructors in builtin bridges; typos